# wx-dump-4

./: .gitignore  IMPLEMENTATION_PROGRESS.md  PROGRESS.md  PROJECT_SUMMARY.md  README.md  TODO.md  USAGE.md  auto-commit-small.bat  auto-commit-small.ps1  auto-commit-small.sh  auto-commit.bat  auto-commit.ps1  auto-commit.sh
backend/: .gitignore  Cargo.toml  clippy.toml  rustfmt.toml
backend/src/: main.rs
backend/src/api/: chat.rs  cleanup.rs  decrypt.rs  export.rs  favorite.rs  media.rs  merge.rs  mod.rs  moments.rs  openapi.rs  statistics.rs  tools.rs  wx_info.rs
backend/src/api/chat/: handlers.rs  models.rs
backend/src/api/cleanup/: handlers.rs  models.rs
backend/src/api/decrypt/: handlers.rs  models.rs
backend/src/api/export/: csv_export.rs  handlers.rs  html_export.rs  json_export.rs  models.rs
backend/src/api/favorite/: handlers.rs  models.rs
backend/src/api/media/: handlers.rs  models.rs
backend/src/api/merge/: handlers.rs  models.rs
backend/src/api/moments/: handlers.rs  models.rs
backend/src/api/statistics/: handlers.rs  models.rs
backend/src/api/tools/: handlers.rs  (+1 more)
backend/src/config/: mod.rs
backend/src/core/: decryption.rs  file_version.rs  memory.rs  memory_map.rs  mod.rs  process.rs  version.rs  version_detection.rs  wx_info.rs
backend/src/db/: bytes_extra.rs  contact.rs  dbbase.rs  favorite.rs  lz4_utils.rs  media.rs  merge.rs  mod.rs  msg.rs  msg_list.rs  msg_parser.rs  msg_query.rs  protobuf_parser.rs  sns.rs  utils.rs
backend/src/models/: mod.rs  wx.rs
backend/src/utils/: cache.rs  error.rs  mod.rs  validation.rs
(+36 files in other folders)
